# Amagate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  release.sh
.github/ISSUE_TEMPLATE/: 0_bug_report.yml  1_feature_request.yml
.github/workflows/: build-extension.yml  release.yml
docs/en-US/: ChangeLog.md  Documentation.md
docs/zh-CN/: README.md
docs/zh-HANS/: ChangeLog.md  Documentation.md  README.md
src/: parsebw.py
src/Amagate/: __init__.py  blender_manifest.toml  bpy_stub.pyi  data.py  nodes_data.py  operator.py  panel.py  translations.py  version
src/Amagate/Models/: manifest.json
src/Amagate/_BAT/: requirements.txt
src/Amagate/blade_scripts/: Cfg.py  pj.py
src/Amagate/icons/: icons.ai
src/Amagate/locale/: es.py  ru.py  zh_HANS.py
src/Amagate/scripts/: L3D_data.py  L3D_ext_operator.py  L3D_imp_operator.py  L3D_operator.py  L3D_panel.py  ag_utils.py  anim_operator.py  data.py  entity_data.py  entity_operator.py  operator.py  operator_sector.py  panel.py  parsebw.py  pj.py  sector_data.py  sector_operator.py  translations.py
src/Amagate/service/: ag_service.py  protocol.py
src/Amagate/utils/: parsebw.py
src/AmagateClient/: BLModInfo.py
src/AmagateClient/Scripts/: AmagateMenu.py  ag_client.py  protocol.py  utils.py
src/ext/: CMakeLists.txt  amagatex.cpp
